# vroom-vroom

./: .gitignore
libs/neural_net/: Cargo.toml
libs/neural_net/src/: layer.rs  lib.rs  mlp.rs  neuron.rs
libs/reinforcement_learning/: Cargo.toml
libs/reinforcement_learning/src/: chromosome.rs  crossover.rs  genetic_algorithm.rs  individual.rs  lib.rs  mutation.rs  selection.rs
libs/reinforcement_learning/src/crossover/: uniform_crossover.rs
libs/reinforcement_learning/src/mutation/: gaussian_mutation.rs
libs/reinforcement_learning/src/selection/: fitness_proportionate_selection.rs
libs/simulation/: Cargo.toml
libs/simulation/src/: animal.rs  eye.rs  food.rs  generation_statistics.rs  lib.rs  simulation.rs  world.rs
libs/simulation_wasm/: Cargo.toml
libs/simulation_wasm/src/: lib.rs
wasm_app/: index.css  index.html  index.js  package-lock.json  package.json  simulation.js
